--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <canvas id = "gameCanvas" width = 1400, height = 800>
         <script src="Main.js"></script>
     <canvas id = "frame" width = 1400, height = 800>
-        <script src="Pong.js"></script>
+        <script src="pong.js"></script>
 </body>
 </html>
