--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+<head>  
+    <meta charset = "UTF-8">
     <title>Mishplayz Hub</title>
     <style>
         canvas {
@@ -16,329 +15,14 @@
             text-align: center;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-
-        h1 {
-            color: white;
-        }
-
-        h2 {
-            color: white;
-        }
     </style>
 </head>
 <body>
     <h1>Mishplayz Chill Hub</h1>
-    <h2>Some Iconic Games Remade by me, Kaushal Mishra using HTML, JavaScript, and Python. Enjoy!</h2>
-    
-    <!-- Game Canvas for your game -->
-    <canvas id="gameCanvas" width="1400" height="800"></canvas>
-
-    <!-- Separate frame canvas for pong -->
-    <canvas id="frame" width="1400" height="800"></canvas>
-
-    <!-- Linking your JavaScript files -->
-    <script src="Main.js">const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
-
-// Player
-const player = {
-  x: canvas.width / 2,
-  y: canvas.height - 130,
-  width: 70,
-  height: 120,
-  color: "red",
-  speed: 7
-};
-
-// Bullets
-const bullets = [];
-const bulletSpeed = 10;
-const bulletSize = { width: 10, height: 30 };
-
-// Enemies
-const enemies = [];
-const enemySpeed = 1;
-const enemySize = { width: 80, height: 30 };
-let enemySpawnTimer = 0;
-
-// Game state
-let score = 0;
-let enemiesEscaped = 0;
-let gameOver = false;
-
-// Controls
-const keys = {};
-
-window.addEventListener("keydown", (e) => {
-  keys[e.key] = true;
-  if (gameOver && e.key.toLowerCase() === "w") restartGame();
-});
-
-window.addEventListener("keyup", (e) => {
-  keys[e.key] = false;
-});
-
-function drawPlayer() {
-  ctx.beginPath();
-  ctx.arc(player.x + player.width / 2, player.y + player.height, player.width / 2, Math.PI, 0);
-  ctx.fillStyle = player.color;
-  ctx.fill();
-  ctx.stroke();
-}
-
-function drawBullet(bullet) {
-  ctx.fillStyle = "blue";
-  ctx.fillRect(bullet.x, bullet.y, bulletSize.width, bulletSize.height);
-  ctx.strokeRect(bullet.x, bullet.y, bulletSize.width, bulletSize.height);
-}
-
-function drawEnemy(enemy) {
-  ctx.fillStyle = "yellow";
-  ctx.fillRect(enemy.x, enemy.y, enemySize.width, enemySize.height);
-  ctx.strokeRect(enemy.x, enemy.y, enemySize.width, enemySize.height);
-}
-
-function drawScore() {
-  ctx.fillStyle = "black";
-  ctx.font = "24px Arial";
-  ctx.fillText("Score: " + score, 20, 40);
-}
-
-function drawHealthBar() {
-  const barWidth = 300;
-  const fillWidth = (enemiesEscaped / 10) * barWidth;
-
-  ctx.fillStyle = "green";
-  ctx.fillRect(20, 90, barWidth, 25);
-  ctx.fillStyle = "red";
-  ctx.fillRect(20, 90, fillWidth, 25);
-  ctx.strokeRect(20, 90, barWidth, 25);
-
-  ctx.fillStyle = "black";
-  ctx.fillText(`Enemies Escaped: ${enemiesEscaped}/10`, 20, 80);
-}
-
-function shoot() {
-  bullets.push({
-    x: player.x + player.width / 2 - bulletSize.width / 2,
-    y: player.y
-  });
-}
-
-function spawnEnemy() {
-  const x = Math.random() * (canvas.width - enemySize.width);
-  enemies.push({ x: x, y: Math.random() * 200 });
-}
-
-function checkCollision(a, b) {
-  return (
-    a.x < b.x + enemySize.width &&
-    a.x + bulletSize.width > b.x &&
-    a.y < b.y + enemySize.height &&
-    a.y + bulletSize.height > b.y
-  );
-}
-
-function update() {
-  if (gameOver) return;
-
-  // Player movement
-  if (keys["a"] && player.x > 0) player.x -= player.speed;
-  if (keys["d"] && player.x < canvas.width - player.width) player.x += player.speed;
-
-  // Shooting
-  if (keys["w"] && Date.now() - (shoot.lastTime || 0) > 200) {
-    shoot();
-    shoot.lastTime = Date.now();
-  }
-
-  // Move bullets
-  for (let i = bullets.length - 1; i >= 0; i--) {
-    bullets[i].y -= bulletSpeed;
-    if (bullets[i].y < 0) bullets.splice(i, 1);
-  }
-
-  // Move enemies
-  for (let i = enemies.length - 1; i >= 0; i--) {
-    enemies[i].y += enemySpeed;
-
-    // Collision with player
-    if (
-      enemies[i].x < player.x + player.width &&
-      enemies[i].x + enemySize.width > player.x &&
-      enemies[i].y + enemySize.height > player.y
-    ) {
-      gameOver = true;
-    }
-
-    // Enemy reached bottom
-    if (enemies[i].y > canvas.height) {
-      enemies.splice(i, 1);
-      enemiesEscaped++;
-      if (enemiesEscaped >= 10) gameOver = true;
-    }
-  }
-
-  // Bullet collisions
-  for (let i = bullets.length - 1; i >= 0; i--) {
-    for (let j = enemies.length - 1; j >= 0; j--) {
-      if (checkCollision(bullets[i], enemies[j])) {
-        bullets.splice(i, 1);
-        enemies.splice(j, 1);
-        score++;
-        spawnEnemy();
-        break;
-      }
-    }
-  }
-
-  // Spawn new enemy every ~1 second
-  enemySpawnTimer++;
-  if (enemySpawnTimer >= 80) {
-    spawnEnemy();
-    enemySpawnTimer = 0;
-  }
-}
-
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-  drawPlayer();
-  bullets.forEach(drawBullet);
-  enemies.forEach(drawEnemy);
-  drawScore();
-  drawHealthBar();
-
-  if (gameOver) {
-    ctx.fillStyle = "black";
-    ctx.font = "48px Arial";
-    ctx.fillText("Game Over! Press W to Restart", canvas.width / 2 - 300, canvas.height / 2);
-  }
-}
-
-function loop() {
-  update();
-  draw();
-  requestAnimationFrame(loop);
-}
-
-function restartGame() {
-  score = 0;
-  bullets.length = 0;
-  enemies.length = 0;
-  enemiesEscaped = 0;
-  gameOver = false;
-  player.x = canvas.width / 2;
-}
-
-loop();</script> <!-- Your primary JavaScript file -->
-    <script src="pong.js">const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
-
-// Game variables
-const paddleWidth = 10, paddleHeight = 100;
-const ballSize = 10;
-let upArrowPressed = false, downArrowPressed = false, wKeyPressed = false, sKeyPressed = false;
-let leftPaddleY = canvas.height / 2 - paddleHeight / 2, rightPaddleY = canvas.height / 2 - paddleHeight / 2;
-let ballX = canvas.width / 2, ballY = canvas.height / 2, ballSpeedX = 3, ballSpeedY = 3;
-let leftScore = 0, rightScore = 0;
-
-// Event listeners for controls
-window.addEventListener("keydown", (e) => {
-    if (e.key === "ArrowUp") downArrowPressed = true;
-    if (e.key === "ArrowDown") upArrowPressed = true;
-    if (e.key === "w" || e.key === "W") wKeyPressed = true;
-    if (e.key === "s" || e.key === "S") sKeyPressed = true;
-});
-
-window.addEventListener("keyup", (e) => {
-    if (e.key === "ArrowUp") downArrowPressed = false;
-    if (e.key === "ArrowDown") upArrowPressed = false;
-    if (e.key === "w" || e.key === "W") wKeyPressed = false;
-    if (e.key === "s" || e.key === "S") sKeyPressed = false;
-});
-
-// Draw the paddles, ball, and score
-function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear canvas
-
-    // Draw paddles
-    ctx.fillStyle = "white";
-    ctx.fillRect(0, leftPaddleY, paddleWidth, paddleHeight); // Left paddle
-    ctx.fillRect(canvas.width - paddleWidth, rightPaddleY, paddleWidth, paddleHeight); // Right paddle
-
-    // Draw ball
-    ctx.beginPath();
-    ctx.arc(ballX, ballY, ballSize, 0, Math.PI * 2);
-    ctx.fillStyle = "white";
-    ctx.fill();
-    ctx.closePath();
-
-    // Draw score
-    ctx.font = "30px Arial";
-    ctx.fillText("Left: " + leftScore, canvas.width / 4, 50);
-    ctx.fillText("Right: " + rightScore, 3 * canvas.width / 4, 50);
-}
-
-// Move paddles
-function movePaddles() {
-    if (upArrowPressed && rightPaddleY > 0) rightPaddleY -= 5;
-    if (downArrowPressed && rightPaddleY < canvas.height - paddleHeight) rightPaddleY += 5;
-    if (wKeyPressed && leftPaddleY > 0) leftPaddleY -= 5;
-    if (sKeyPressed && leftPaddleY < canvas.height - paddleHeight) leftPaddleY += 5;
-}
-
-// Move the ball and check for collisions
-function moveBall() {
-    ballX += ballSpeedX;
-    ballY += ballSpeedY;
-
-    // Ball collision with top/bottom
-    if (ballY + ballSize > canvas.height || ballY - ballSize < 0) {
-        ballSpeedY = -ballSpeedY; // Bounce
-    }
-
-    // Ball collision with paddles
-    if (ballX - ballSize < paddleWidth && ballY > leftPaddleY && ballY < leftPaddleY + paddleHeight) {
-        ballSpeedX = -ballSpeedX; // Bounce
-        leftScore++; // Left player scores
-    }
-
-    if (ballX + ballSize > canvas.width - paddleWidth && ballY > rightPaddleY && ballY < rightPaddleY + paddleHeight) {
-        ballSpeedX = -ballSpeedX; // Bounce
-        rightScore++; // Right player scores
-    }
-
-    // Ball out of bounds (left side)
-    if (ballX + ballSize < 0) {
-        rightScore++; // Right player scores
-        resetBall();
-    }
-
-    // Ball out of bounds (right side)
-    if (ballX - ballSize > canvas.width) {
-        leftScore++; // Left player scores
-        resetBall();
-    }
-}
-
-// Reset ball to center after scoring
-function resetBall() {
-    ballX = canvas.width / 2;
-    ballY = canvas.height / 2;
-    ballSpeedX = -ballSpeedX;
-    ballSpeedY = 3 * (Math.random() > 0.5 ? 1 : -1); // Random vertical direction
-}
-
-// Game loop
-function gameLoop() {
-    movePaddles();
-    moveBall();
-    draw();
-    requestAnimationFrame(gameLoop);
-}
-
-gameLoop(); // Start the game loop</script> <!-- Your pong game JavaScript file -->
-
+    <h2>Some Iconic Games Remade by me Kaushal Mishra using HTML, Javascript and Python, Enjoy !</h2>
+    <canvas id = "gameCanvas" width = 1400, height = 800>
+        <script src="Main.js"></script>
+    <canvas id = "frame" width = 1400, height = 800>
+        <script src="Pong.js"></script>
 </body>
 </html>
