--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <script src="Main.js"></script>
     <canvas id = "frame" width = 1400, height = 800>
         <script src="Pong.js"></script>
+        <div><script src="https://cdn.htmlgames.com/embed.js?game=SoccerPinball&amp;bgcolor=white"></script></div>
 </body>
 </html>
