--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             border: 20px solid black;
         }
 
+        canvas {
+            background-color: brown;
+            display: block;
+            margin: 0 auto;
+            border: 20px solid black;
+        }
+
         body {
             text-align: center;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
