--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body>
     <h1>Mishplayz Chill Hub</h1>
     <h2>Some Iconic Games Remade by me Kaushal Mishra using HTML, Javascript and Python, Enjoy !</h2>
-    <canvas id = "gameCanvas" width = 1400, height = 800>
+    <canvas id = "gameCanvas" width = 1400, height = 800></canvas>
         <script src="Main.js"></script>
-    <canvas id = "frame" width = 1400, height = 800>
+    <canvas id = "frame" width = 1400, height = 800></canvas>
         <script src="Pong.js"></script>
         <script src="https://cdn.htmlgames.com/embed.js?game=SoccerPinball&amp;bgcolor=white"></script>
 </body>
