--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
     <div style="margin-top: 20px;">
         <script src="https://cdn.htmlgames.com/embed.js?game=SoccerPinball&bgcolor=white"></script>
     </div>
+    <div style="margin-top: 20px>
+        <script src="https://cdn.htmlgames.com/embed.js?game=AirportSniper&amp;bgcolor=white"></script>
+    </div>
 </body>
 </html>
