--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mishplayz Hub</title>
     <style>
         canvas {
-            background-color: brown;
+            background-color: white;
             display: block;
             margin: 0 auto;
             border: 20px solid black;
