--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
             margin: 0 auto;
             border: 20px solid black;
         }
-
         body {
             text-align: center;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
                          'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-
         h1, h2 {
             color: black;
         }
@@ -25,33 +23,32 @@
 </head>
 <body>
     <h1>Mishplayz Chill Hub</h1>
-    <h2>Some Iconic Games Remade by me Kaushal Mishra using HTML, Javascript and Python, Enjoy!</h2>
-    
+    <h2>Some Iconic Games Remade by Kaushal Mishra using HTML, JavaScript, and Python. Enjoy!</h2>
+
     <canvas id="gameCanvas" width="1400" height="800"></canvas>
-    <script src="Main.js"></script>
-    
     <canvas id="frame" width="1400" height="800" style="display: none;"></canvas>
-    <script src="Pong.js"></script>
 
-    <button onclick = "showMain()">Play Shooter</button>
-    <button onclick = "showPong()">Play Pong</button>
-    <script>
-        function showMain() {
-        document.getElementById('gameCanvas').style.display = 'block';
-        document.getElementById('frame').style.display = 'none';
-        }
-
-        function showPong() {
-        document.getElementById('gameCanvas').style.display = 'none';
-        document.getElementById('frame').style.display = 'block';
-        }
-    </script>
+    <button onclick="showMain()">Play Shooter</button>
+    <button onclick="showPong()">Play Pong</button>
 
     <div style="margin-top: 20px;">
-        <script src="https://cdn.htmlgames.com/embed.js?game=SoccerPinball&bgcolor=white"></script>
+        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
-    <div>
-        <script src="https://cdn.htmlgames.com/embed.js?game=AirportSniper&bgcolor=white"></script>
+    <div style="margin-top: 20px;">
+        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
+
+    <script src="Main.js"></script>
+    <script src="Pong.js"></script>
+    <script>
+        function showMain() {
+            document.getElementById('gameCanvas').style.display = 'block';
+            document.getElementById('frame').style.display = 'none';
+        }
+        function showPong() {
+            document.getElementById('gameCanvas').style.display = 'none';
+            document.getElementById('frame').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
