--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>Some Iconic Games Remade by Kaushal Mishra using HTML, JavaScript, and Python. Enjoy!</h2>
 
     <canvas id="gameCanvas" width="1400" height="800"></canvas>
-    <canvas id="frame" width="1400" height="800" style="display: none;"></canvas>
+    <canvas id="pongCanvas" width="1400" height="800" style="display: none;"></canvas>
 
     <button onclick="showMain()">Play Shooter</button>
     <button onclick="showPong()">Play Pong</button>
@@ -43,11 +43,11 @@
     <script>
         function showMain() {
             document.getElementById('gameCanvas').style.display = 'block';
-            document.getElementById('frame').style.display = 'none';
+            document.getElementById('pongCanvas').style.display = 'none';
         }
         function showPong() {
             document.getElementById('gameCanvas').style.display = 'none';
-            document.getElementById('frame').style.display = 'block';
+            document.getElementById('pongCanvas').style.display = 'block';
         }
     </script>
 </body>
