--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <script>
         function showMain() {
             document.getElementById('gameCanvas').style.display = 'block';
-            document.getElementById('frame').style.display = 'none';
+            document.getElementById('pongCanvas').style.display = 'none';
         }
         function showPong() {
             document.getElementById('gameCanvas').style.display = 'none';
-            document.getElementById('frame').style.display = 'block';
+            document.getElementById('pongCanvas').style.display = 'block';
         }
     </script>
 </body>
