--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <script src="Pong.js"></script>
     <script>
         function showMain() {
-            document.getElementById('gameCanvas').style.display = 'block';
-            document.getElementById('pongCanvas').style.display = 'none';
+            document.getElementById('gameCanvas').style.display = 'none';
+            document.getElementById('pongCanvas').style.display = 'blcok';
         }
         function showPong() {
-            document.getElementById('gameCanvas').style.display = 'none';
-            document.getElementById('pongCanvas').style.display = 'block';
+            document.getElementById('gameCanvas').style.display = 'block';
+            document.getElementById('pongCanvas').style.display = 'none';
         }
     </script>
 </body>
