--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         function showPong() {
             document.getElementById('gameCanvas').style.display = 'none';
             document.getElementById('pongCanvas').style.display = 'block';
+            startGame();
         }
     </script>
 </body>
