--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             background-color: white;
             display: block;
             margin: 0 auto;
-            border: 20px solid black;
+            border: 20px solid cyan;
         }
         body {
             text-align: center;
@@ -17,25 +17,26 @@
                          'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
         h1, h2 {
-            color: black;
+            color: white;
         }
     </style>
 </head>
-<body>
+<body style = "background-color: black;">
     <h1>Mishplayz Chill Hub</h1>
     <h2>Some Iconic Games Remade by Kaushal Mishra using HTML, JavaScript, and Python. Enjoy!</h2>
+    <h2>Click on the buttons below to play the games:</h2>
 
-    <button onclick="showMain()">Play Shooter</button>
-    <button onclick="showPong()">Play Pong</button>
+    <button style = "background-color: aliceblue; height: 20; width: 60;" onclick="showMain()">Play Shooter</button>
+    <button style = "background-color: aliceblue; height: 20; width: 60;" onclick="showPong()">Play Pong</button>
     
     <canvas id="gameCanvas" width="1200" height="600"></canvas>
     <canvas id="pongCanvas" width="1200" height="600" style="display: none;"></canvas>    
 
     <div style="margin-top: 20px;">
-        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
     <div style="margin-top: 20px;">
-        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 
     <script src="Main.js"></script>
