--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <h2>Some Iconic Games Remade by Kaushal Mishra using HTML, JavaScript, and Python. Enjoy!</h2>
     <h2>Click on the buttons below to play the games:</h2>
 
-    <button style = "background-color: aliceblue; height: 20; width: 60;" onclick="showMain()">Play Shooter</button>
-    <button style = "background-color: aliceblue; height: 20; width: 60;" onclick="showPong()">Play Pong</button>
+    <button style = "background-color: red; height: 20px; width: 60px;" onclick="showMain()">Play Shooter</button>
+    <button style = "background-color: cyan; height: 20px; width: 60px;" onclick="showPong()">Play Pong</button>
     
     <canvas id="gameCanvas" width="1200" height="600"></canvas>
     <canvas id="pongCanvas" width="1200" height="600" style="display: none;"></canvas>    
