--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <button style = "background-color: cyan; height: 60px; width: 140px;" onclick="showPong()">Play Pong, W, S for p1 and L, P for p2, have fun !</button>
     
     <canvas id="gameCanvas" width="1200" height="600"></canvas>
-    <canvas id="pongCanvas" width="1200" height="600" style="display: none;"></canvas>    
+    <canvas id="pongCanvas" width="1200" height="600"></canvas>    
 
     <div style="margin-top: 20px;">
-        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="1200" height="600" frameborder="20" scrolling="no"></iframe>
     </div>
     <div style="margin-top: 20px;">
-        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200" height="600" frameborder="20" scrolling="no"></iframe>
     </div>
 
     <script src="Main.js"></script>
