--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
     <button style="background-color: red; height: 60px; width: 280px;" onclick="showMain()">Play Shooter (A, D to move and W to shoot)</button>
     <button style="background-color: cyan; height: 60px; width: 280px;" onclick="showPong()">Play Pong (W, S for P1 and L, P for P2)</button>
-    
+    <button style="background-color: yellow; height: 60px; width: 280px;" onclick="show2ps()">Play 2ps (WASd for p1 and arrowkeys for p2, q and rshift to shoot))</button>
+
     <canvas id="gameCanvas" width="1200" height="600"></canvas>
-    <canvas id="pongCanvas" width="1200" height="600"></canvas>    
+    <canvas id="pongCanvas" width="1200" height="600"></canvas>
+    <canvas id="2psCanvas" width="1200" height="600"></canvas> 
 
     <div style="margin-top: 20px;">
         <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
