--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             document.getElementById('pongCanvas').style.display = 'block';
             document.getElementById('2psCanvas').style.display = 'none';
             if (typeof startGame === "function") {
-                startGame();  // This should be defined in Pong.js
+                startGame();
             }
         }
 
@@ -74,7 +74,7 @@
             document.getElementById('pongCanvas').style.display = 'none';
             document.getElementById('2psCanvas').style.display = 'block';
             if (typeof startGame === "function") {
-                start2ps();  // This should be defined in Pong.js
+                start2ps(); 
             }
         }
     </script>
