--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script src="Main.js"></script>
     <script src="Pong.js"></script>
-    <script> src="2ps.js"</script>
+    <script src="2ps.js"></script>
 
     <script>
         function showMain() {
@@ -73,10 +73,8 @@
             document.getElementById('gameCanvas').style.display = 'none';
             document.getElementById('pongCanvas').style.display = 'none';
             document.getElementById('2psCanvas').style.display = 'block';
-            if (typeof startGame === "function") {
                 start2ps(); 
-            }
-        }
+}
     </script>
 </body>
 </html>
