--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div style="margin-top: 20px;">
         <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
+    <iframe src="https://y8.com/embed/slope" scrolling="no" style="width: 960px; height: 641px; border: 0; margin: 0; padding: 0;"> </iframe>​
 
     <script src="Main.js"></script>
     <script src="Pong.js"></script>
