--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
     <div style="margin-top: 20px;">
         <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
-    <iframe src="https://y8.com/embed/slope" scrolling="no" style="width: 960px; height: 641px; border: 0; margin: 0; padding: 0;"> </iframe>​
+    <div style="position: relative; padding-bottom: 66.7%; height: 0; overflow: hidden;">
+        <iframe 
+          src="https://y8.com/embed/slope" 
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" 
+          allowfullscreen>
+        </iframe>
+    </div>
+      
 
     <script src="Main.js"></script>
     <script src="Pong.js"></script>
