--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div style="position: relative; padding-bottom: 66.7%; height: 0; overflow: hidden;">
         <iframe 
           src="https://y8.com/embed/slope" 
-          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" 
+          style="position: center; top: 0; left: 0; width: 100%; height: 100%; border: 0;" 
           allowfullscreen>
         </iframe>
     </div>
