--- a/index.html
+++ b/index.html
@@ -43,18 +43,32 @@
     <canvas id="2psCanvas" width="1200" height="600"></canvas> 
 
     <div style="margin-top: 20px;">
-        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://cdn.htmlgames.com/SoccerPinball/" width="1200px" height="600px" frameborder="0" scrolling="no"></iframe>
     </div>
     <div style="margin-top: 20px;">
-        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://cdn.htmlgames.com/AirportSniper/" width="1200px" height="600px" frameborder="0" scrolling="no"></iframe>
     </div>
-    <div style="position: relative; padding-bottom: 66.7%; height: 0; overflow: hidden;">
+    <div style="margin-top: 20px;">
         <iframe 
-          src="https://y8.com/embed/slope" 
-          style="position: center; top: 0; left: 0; width: 100%; height: 100%; border: 0;" 
-          allowfullscreen>
+            src="https://y8.com/embed/slope" 
+            width="1200" 
+            height="600" 
+            frameborder="0" 
+            scrolling="no" 
+            allowfullscreen>
         </iframe>
     </div>
+    <div style="margin-top: 20px;">
+        <iframe 
+            src="https://y8.com/embed/subway_surfers_monaco" 
+            width="1200" 
+            height="600" 
+            frameborder="0" 
+            scrolling="no" 
+            allowfullscreen>
+        </iframe>
+    </div>
+    
       
 
     <script src="Main.js"></script>
