--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <h1>Mishplayz Chill Hub</h1>
     <h2>Some Iconic Games Remade by Kaushal Mishra using HTML, JavaScript, and Python. Enjoy!</h2>
-    <h2>Click on the buttons below to play the games:</h2>
+    <h2>Click on the buttons below to play the games: anal sex</h2>
 
     <button style="background-color: red; height: 60px; width: 280px;" onclick="showMain()">Play Shooter (A, D to move and W to shoot)</button>
     <button style="background-color: cyan; height: 60px; width: 280px;" onclick="showPong()">Play Pong (W, S for P1 and L, P for P2)</button>
@@ -68,7 +68,7 @@
             allowfullscreen>
         </iframe>
     </div>
-    
+w    
       
 
     <script src="Main.js"></script>
